--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.21.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.5",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "postcss": "^8.1.14"
+        "vue": "^2.5.17"
     }
 }
